Homepage with coments at bottom

--- a/home.html
+++ b/home.html
@@ -9,11 +9,11 @@
 <body>
     <h1>LvivAssistHub</h1>
 
-    <a>
+    <a href="{{ url_for('search') }}">
         <button class="button" style="position: absolute; top: 425px; left: 70px;">I'm a user</button>
     </a>
 
-    <a>
+    <a href="{{ url_for('employee') }}">
         <button class="button" style="position: absolute; top: 587px; left: 70px;">I'm a service provider</button>
     </a>
 </body>
