--- a/employee.html
+++ b/employee.html
@@ -1,29 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Employee Information</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <title>LvivAssistHub</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='employee.css') }}">
 </head>
 <body>
-<h1>Employee Information</h1>
-<div class="container">
-  <div class="row">
-    {% for employee in employees %}
-    <div class="col-md-4 mb-4">
-      <div class="card">
-        <div class="card-body gray-bg">
-          <h5 class="card-title">{{ employee.name }} {{ employee.surname }}</h5>
-          <h6>{{ employee.email }}</h6>
-          <p>{{ employee.description }}</p>
-          <button class="button_to_url">View Details</button>
-        </div>
-      </div>
-    </div>
-    {% endfor %}
-  </div>
-</div>
+    <h1>Employee page</h1>
+
+    <a href="{{ url_for('register') }}">
+        <button class="button" style="position: absolute; top: 425px; left: 70px;">Sign Up</button>
+    </a>
+
+    <a href="{{ url_for('login') }}">
+        <button class="button" style="position: absolute; top: 587px; left: 70px;">Log In</button>
+    </a>
 </body>
 </html>
